artist refactor after tests 6

--- a/src/artist.html
+++ b/src/artist.html
@@ -18,13 +18,13 @@
     <nav class="mb-mobile-1">
       <ul class="d-flex column-gap-2 flex-mobile-column fs-ultra-small fw-mobile-bold">
         <li class="lh-1">
-          <a class="navigation-link navigation-link--active" href="index.html">Главная</a>
+          <a class="navigation-link" href="index.html">Главная</a>
         </li>
         <li class="lh-1">
           <a class="navigation-link" href="#">Каталог</a>
         </li>
         <li class="lh-1">
-          <a class="navigation-link" href="artist.html">Исполнители</a>
+          <a class="navigation-link navigation-link--active" href="artist.html">Исполнители</a>
         </li>
         <li class="lh-1">
           <a class="navigation-link" href="#">Контакты</a>
@@ -112,37 +112,37 @@
 
     <div class="grid grid--items-4">
       <div class="discography-item">
-        <img class="discography-item-cover mb-1" src="./images/Brother.png" alt="Brother">
+        <img class="discography-item-cover" src="./images/Brother.png" alt="Brother">
         <h3 class="discography-item-album-name tt-capitalize">Brother</h3>
         <p class="fs-1">2014</p>
       </div>
 
       <div class="discography-item">
-        <img class="discography-item-cover mb-1" src="./images/Out%20of%20My%20Hands.png" alt="Out Of My Hands">
+        <img class="discography-item-cover" src="./images/Out%20of%20My%20Hands.png" alt="Out Of My Hands">
         <h3 class="discography-item-album-name tt-capitalize nowrap">Out Of My Hands</h3>
         <p class="fs-1">2012</p>
       </div>
 
       <div class="discography-item">
-        <img class="discography-item-cover mb-1" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
+        <img class="discography-item-cover" src="./images/Letter%20from%20Egypt.png" alt="Letter From Egypt">
         <h3 class="discography-item-album-name tt-capitalize">Letter From Egypt</h3>
         <p class="fs-1">2008</p>
       </div>
 
       <div class="discography-item">
-        <img class="discography-item-cover mb-1" src="./images/Vogts%20Villa.png" alt="Vogts Vills">
+        <img class="discography-item-cover" src="./images/Vogts%20Villa.png" alt="Vogts Vills">
         <h3 class="discography-item-album-name tt-capitalize">Vogts Vills</h3>
         <p class="fs-1">1996</p>
       </div>
 
       <div class="discography-item">
-        <img class="discography-item-cover mb-1" src="./images/Wild%20Seed.png" alt="Wild Seed">
+        <img class="discography-item-cover" src="./images/Wild%20Seed.png" alt="Wild Seed">
         <h3 class="discography-item-album-name tt-capitalize">Wild Seed</h3>
         <p class="fs-1">1995</p>
       </div>
 
       <div class="discography-item">
-        <img class="discography-item-cover mb-1" src="./images/Poetenes%20Evangelium.png" alt="Poetenes Evangelium">
+        <img class="discography-item-cover" src="./images/Poetenes%20Evangelium.png" alt="Poetenes Evangelium">
         <h3 class="discography-item-album-name tt-capitalize">Poetenes Evangelium</h3>
         <p class="fs-1">1993</p>
       </div>
@@ -156,49 +156,49 @@
       <div class="similar text-center">
         <img class="similar-cover" src="./images/A-ha.png" alt="A-Ha">
         <h3 class="similar-name">A-Ha</h3>
-        <p class="similar-fans">417 086 поклонников</p>
+        <p class="fs-1">417 086 поклонников</p>
       </div>
 
       <div class="similar text-center">
         <img class="similar-cover" src="./images/Tears%20for%20Fears.png" alt="Tears For Fears">
         <h3 class="similar-name">Tears For Fears</h3>
-        <p class="similar-fans">434 086 поклонников</p>
+        <p class="fs-1">434 086 поклонников</p>
       </div>
 
       <div class="similar text-center">
         <img class="similar-cover" src="./images/Duran%20Duran.png" alt="Duran Duran">
         <h3 class="similar-name">Duran Duran</h3>
-        <p class="similar-fans">631 071 поклонник</p>
+        <p class="fs-1">631 071 поклонник</p>
       </div>
 
       <div class="similar text-center">
         <img class="similar-cover" src="./images/Jack%20Savoretti.png" alt="Jack Savoretti">
         <h3 class="similar-name">Jack Savoretti</h3>
-        <p class="similar-fans">26 857 поклонников</p>
+        <p class="fs-1">26 857 поклонников</p>
       </div>
 
       <div class="similar text-center">
         <img class="similar-cover" src="./images/Keane.png" alt="Keane">
         <h3 class="similar-name">Keane</h3>
-        <p class="similar-fans">1 704 358 поклонников</p>
+        <p class="fs-1">1 704 358 поклонников</p>
       </div>
 
       <div class="similar text-center">
         <img class="similar-cover" src="./images/Frank%20Sinatra.png" alt="Frank Sinatra">
         <h3 class="similar-name">Frank Sinatra</h3>
-        <p class="similar-fans">1 653 882 поклонников</p>
+        <p class="fs-1">1 653 882 поклонников</p>
       </div>
 
       <div class="similar text-center">
         <img class="similar-cover" src="./images/Paul%20Young.png" alt="Paul Young">
         <h3 class="similar-name">Paul Young</h3>
-        <p class="similar-fans">50 329 поклонников</p>
+        <p class="fs-1">50 329 поклонников</p>
       </div>
 
       <div class="similar text-center">
         <img class="similar-cover" src="./images/Chris%20Rea.png" alt="Chris Rea">
         <h3 class="similar-name">Chris Rea</h3>
-        <p class="similar-fans">73 351 поклонников</p>
+        <p class="fs-1">73 351 поклонников</p>
       </div>
     </div>
   </section>
