artist refactor after tests 7

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
 <section class="page-description page-description--main text-center" id="page-description">
   <div class="limit-content">
-    <h1>Онлайн музыка где угодно</h1>
+    <h1 class="mt-mobile-5">Онлайн музыка где угодно</h1>
     <h2 class="mb-3 mb-mobile-1">без ограничений</h2>
     <p class="fs-1 color-white mb-1">
       Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки
