artist refactor after tests 8

--- a/src/artist.html
+++ b/src/artist.html
@@ -38,9 +38,9 @@
 
 <section class="page-description page-description--artist" id="page-description">
   <div class="limit-content">
-    <h1 class="text-start mb-1">Morten Harket</h1>
+    <h1 class="text-start mb-1 mt-5 mt-mobile-2">Morten Harket</h1>
     <p class="fs-1 text-start color-white mb-5">24 875 поклонников</p>
-    <div class="artist-description-buttons d-flex column-gap-2 row-gap-mobile-2 flex-mobile-column">
+    <div class="artist-description-buttons d-flex column-gap-2 row-gap-mobile-2 flex-mobile-column mb-2">
       <button class="btn btn-purple btn-icon btn-icon--play">
         <span>Микс</span>
       </button>
