artist refactor after tests 9

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         name="email"
         placeholder="Email"
       >
-      <button class="subscribe-form-btn btn btn-primary">Получить доступ</button>
+      <button class="subscribe-form-btn btn btn-primary" type="submit">Получить доступ</button>
     </form>
   </div>
 </section>
