--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>Music Box - conarti</title>
@@ -110,7 +110,7 @@
     <h2 class="text-center mb-5">Последние новости</h2>
 
     <div class="news-item news-item--img-left mb-7">
-      <img class="news-item-image" src="./images/Music to Be Murdered By.png" alt="Music to Be Murdered By">
+      <img class="news-item-image" src="./images/Music%20to%20Be%20Murdered%20By.png" alt="Music to Be Murdered By">
       <div class="news-item-body">
         <h3 class="news-item-title">Music to Be Murdered By</h3>
         <p class="fs-1">
@@ -129,7 +129,7 @@
     </div>
 
     <div class="news-item news-item--img-right">
-      <img class="news-item-image" src="./images/Ordinary Man.png" alt="Ordinary Man">
+      <img class="news-item-image" src="./images/Ordinary%20Man.png" alt="Ordinary Man">
       <div class="news-item-body">
         <h3 class="news-item-title">Ordinary Man</h3>
         <p class="fs-1">
